# kobo-srv

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: main.rs  resources.json
